--- a/index.html
+++ b/index.html
@@ -117,9 +117,47 @@
                     </div>
                 </div>
                 <div class="bloknot v" id="tarif-anchor"></div>
-                <div class="tariffs">
-                    <div class="tarriff-border">
-                        <h2 class="h2 pdng">Тарифы</h2>
+                <div class="benefits">
+                    <div class="benefits-border">
+                        <h2 class="h2">Преимущества</h2>
+                        <div class="benefits-container">
+                            <div class="benefits-column-first">
+                                <div class="risk-reduction">
+                                    <div class="benefits-img"><img src="./img/decline.png" class="risk-img"></div>
+                                    <div class="benefits-text"><p class="benefits-text-p">Снижение рисков и затрат</p></div>
+                                </div>
+                                <div class="mobile-app">
+                                    <div class="benefits-img"><img src="./img/mobile.png" class="mobile-img"></div>
+                                    <div class="benefits-text"><p class="benefits-text-p">Мобильное приложение</p></div>
+                                </div>
+                                <div class="time-saving">
+                                    <div class="benefits-img"><img src="./img/time.png" class="time-img"></div>
+                                    <div class="benefits-text"><p class="benefits-text-p">Экономия времени</p></div>
+                                </div>
+                            </div>
+                            <div class="benefits-column-second">
+                                <div class="support">
+                                    <div class="benefits-img"><img src="./img/24h.png" class="h-img"></div>
+                                    <div class="benefits-text"><p class="benefits-text-p">Постоянная поддержка</p></div>
+                                </div>
+                                <div class="quality">
+                                    <div class="benefits-img"><img src="./img/quality2.png" class="quality-img"></div>
+                                    <div class="benefits-text"><p class="benefits-text-p">Повышение качества и своемременности расчета</p></div>
+                                </div>
+                                <div class="promotion">
+                                    <div class="benefits-img"><img src="./img/shield.png" class="shield-img"></div>
+                                    <div class="benefits-text"><p class="benefits-text-p">Повышение уровня конфиденциальности</p></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main-yellow-bg">
+                <div class="main-content-wrapper pos">
+                    <div class="tariffs">
+                        <h2 class="pdng">Наши Тарифы</h2>
+                        <div class="yellow-arrow"></div>
                         <div class="tariffs-container">
                             <div class="tariffs-blocks">
                                 <div class="tariffs-blocks-header">
@@ -697,44 +735,31 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="express-audit mrgnblk v" id="audit-anchor">
-                    <div class="express-audit-container">
-                        <div class="express-audit-image">
-                            <img src="img/Kalkulyator_transp.png" style="width: 131px; height: 423px; padding-left: 117px;">
-                        </div>
-                        <div class="express-audit-text-container">
-                            <h2 class="h2">Экспресс-аудит бухучета</h2>
-                            <div class="express-audit-text">
-                                Проверьте учет в вашей компании  на ошибки. В течении дня вы получите отчет с рекомендациями по улучшению ведения учета. 
+                    <div class="express-audit mrgnblk v" id="audit-anchor">
+                        <div class="express-audit-container">
+                            <div class="express-audit-image">
+                                <img src="img/Kalkulyator_transp.png" style="width: 131px; height: 423px; padding-left: 117px;">
                             </div>
-                            <div class="express-audit-button">
-                                <img src="img/Resurs_4_4x.png" style="width: 117px; height: 39px; transform: rotate(28deg); padding-left: 35%; padding-bottom: 4%;">
-                                <button class="audit-order-button"><p class="button-name">Заказать</p></button>
-                            </div>
-                            <div class="express-audit-description">
-                                Экспресс-аудит* представляет собой  выборочную проверку<br> состояния налогового и бухгалтерского учёта. Проводится<br> удалённо и позволяет выявить ошибки в отчётности 
+                            <div class="express-audit-text-container">
+                                <h2 class="h2">Экспресс-аудит бухучета</h2>
+                                <div class="express-audit-text">
+                                    Проверьте учет в вашей компании  на ошибки. В течении дня вы получите отчет с рекомендациями по улучшению ведения учета. 
+                                </div>
+                                <div class="express-audit-button">
+                                    <img src="img/Resurs_4_4x.png" style="width: 117px; height: 39px; transform: rotate(28deg); padding-left: 35%; padding-bottom: 4%;">
+                                    <button class="audit-order-button"><p class="button-name">Заказать</p></button>
+                                </div>
+                                <div class="express-audit-description">
+                                    Экспресс-аудит* представляет собой  выборочную проверку<br> состояния налогового и бухгалтерского учёта. Проводится<br> удалённо и позволяет выявить ошибки в отчётности 
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="about-our-company mrgnblk v" id="about-us-anchor">
-                    <div class="about-our-company-container">
-                        <div class="about-our-company-first">
-                            <h2>О нашей компании</h2>
+                    <div class="about-our-company mrgnblk v" id="about-us-anchor">
+                        <div class="about-our-company-container">
+                            <div><h2>О нашей компании</h2></div>
                             <div class="about-our-company-text">
-                                Российская фирма <<1C>> основана в 1991г.,специализируется на разработке, дистрибьюции, издании и поддержке компьютерных программ делового и домашнегоназначения. Из собственных разработок фирмы <<1C>> наиболее известны программы системы <<1C:Предприятие>>. <br> <br> Компания «АлгорИТм» - партнер фирмы «1C», оказывающий бухгалтерские услуги малому бизнесу под маркой «1C:БухОбслуживание» по единому стандарту и технологии оказания бухгалтерских услуг, разработанному в фирме 1C. Это позволяет контролировать качество оказываемых услуг учета (минимизировать количество ошибок, допускаемых в расчетах, в кадровом учете, при составлен регламентированной отчетности), повышая при этом эффективность работы специалистов. Реализована процедура централизованного аудита качества учета от Фирмы 1C.
-                            </div>
-                            <div>
-                                <img src="img/girls.png" style="width: 325px; height: 470px; padding-top: 8px;">
-                            </div>
-                        </div>
-                        <div class="about-our-company-second">
-                            <div>
-                                <img src="img/1CGirlsNewFin014_transp.png" style="width: 368px; height: 470px;">
-                            </div>
-                            <div class="about-our-company-text-second">
-                                Мы меняем философию бухгалтерского обслуживания!«1C:БухОбслуживание» - это «аквариум», а не «черный ящик», обслуживающая бухгалтерия 1C:БО прозрачна для клиента. <br> <br> Для наших клиентов мы делаем бухгалтерский мир близким, дружелюбным и простым для понимания. Теперь Вы можете заниматься своим бизнесом, а не бухучетом. И в то же время имеете возможность контролировать свою бухгалтерию с любого компьютера с доступом в Интернет.
+                                Компания «АлгорИТм» - партнер фирмы «1C», оказывающий бухгалтерские услуги малому бизнесу под маркой «1C:БухОбслуживание» по единому стандарту и технологии оказания бухгалтерских услуг, разработанному в фирме 1C. Это позволяет контролировать качество оказываемых услуг учета (минимизировать количество ошибок, допускаемых в расчетах, в кадровом учете, при составлен регламентированной отчетности), повышая при этом эффективность работы специалистов. Реализована процедура централизованного аудита качества учета от Фирмы 1C. <br><br> Для наших клиентов мы делаем бухгалтерский мир близким, дружелюбным и простым для понимания. Теперь Вы можете заниматься своим бизнесом, а не бухучетом. И в то же время имеете возможность контролировать свою бухгалтерию с любого компьютера с доступом в Интернет.
                             </div>
                             <div class="about-logo-container">
                                 <div class="about-1c-logo">
@@ -821,8 +846,7 @@
                         body.style.overflow = "visible";
                     }
                 }
-            }); 
-            
+            });
 
             const anchors = document.querySelectorAll('a.hover')
 
@@ -847,13 +871,12 @@
             console.log(currentURL);
 
             for (let i = 0; i < linksCount; i++) {
-            let linkURL = links[i].href;
-
-            // linkURL == currentURL, если не надо светить уровни выше
-            if (currentURL[i].id == linkURL) {
-                links[i].classList.add("active");
-                }
+                let linkURL = links[i].href;
+                if (currentURL[i].id == linkURL) {
+                    links[i].classList.add("active");
+                    }
             }
+
         </script>
     </body>
 </html>
