--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Главная страница</title>
         <link rel="stylesheet" href="./styles/style.css">
-        <link rel="stylesheet" href="./styles/aboutus.css">
+        <link rel="stylesheet" href="./styles/itc-slider.css">  
+        <script src="./itc-slider.js" defer></script>
+        <title>Главная страница</title>
     </head>
     <body class="body">
         <div class="header v" id="main-anchor">
@@ -735,10 +736,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="express-audit mrgnblk v" id="audit-anchor">
+                    <div class="express-audit v" id="audit-anchor">
                         <div class="express-audit-container">
                             <div class="express-audit-image">
-                                <img src="img/Kalkulyator_transp.png" style="width: 131px; height: 423px; padding-left: 117px;">
+                                <img src="img/Kalkulyator_transp.png" class="audit-img">
                             </div>
                             <div class="express-audit-text-container">
                                 <h2 class="h2">Экспресс-аудит бухучета</h2>
@@ -755,37 +756,95 @@
                             </div>
                         </div>
                     </div>
+                    <div class="reviews">
+                        <h2 class="h2">Отзывы</h2>
+                        <div class="reviews-container">
+                            <div class="itc-slider" data-slider="itc-slider" data-autoplay="true">
+                                <div class="itc-slider__wrapper">
+                                    <div class="itc-slider__items">
+                                        <div class="itc-slider__item">
+                                            <div class="slider-content">
+                                                <p class="slider-content-text">"Также как социально-экономическое развитие
+                                                    обеспечивает широкому кругу (специалистов) участие в формировании системы
+                                                    обучения кадров, соответствующей насущным потребностям. Каждый из нас
+                                                    понимает очевидную вещь: внедрение современных методик требует анализа
+                                                    инновационных методов управления процессами. В целом, конечно,
+                                                    социально-экономическое развитие говорит о возможностях благоприятных
+                                                    перспектив."</p>
+                                            </div>
+                                            <div class="slider-text-name">Алишер, 25 лет</div>
+                                            <div class="slider-job">Замеситель по особо важным делам</div>
+                                            <div class="img-position">
+                                                <div class="slider-img">
+                                                    <img src="./img/primer1.png" class="slider-img-circle">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="itc-slider__item">
+                                            <div class="slider-content">
+                                                <p class="slider-content-text">"Идейные соображения высшего порядка, а также
+                                                    дальнейшее развитие различных форм деятельности позволяет выполнять важные
+                                                    задания по разработке существенных финансовых и административных условий.
+                                                    Задача организации, в особенности же рамки и место обучения кадров играет
+                                                    важную роль в формировании форм развития. Значимость этих проблем настолько
+                                                    очевидна, что постоянный количественный рост и сфера нашей активности
+                                                    позволяет оценить значение дальнейших направлений развития."</p>
+                                            </div>
+                                            <div class="slider-text-name">Алишер, 25 лет</div>
+                                            <div class="slider-job">Замеситель по особо важным делам</div>
+                                            <div class="img-position">
+                                                <div class="slider-img">
+                                                    <img src="./img/primer1.png" class="slider-img-circle">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="itc-slider__item">
+                                            <div class="slider-content">
+                                                <p class="slider-content-text">Не следует, однако забывать, что новая модель
+                                                    организационной деятельности влечет за собой процесс внедрения и
+                                                    модернизации новых предложений. Не следует, однако забывать, что новая
+                                                    модель организационной деятельности позволяет оценить значение новых
+                                                    предложений.</p>
+                                            </div>
+                                            <div class="slider-text-name">Алишер, 25 лет</div>
+                                            <div class="slider-job">Замеситель по особо важным делам</div>
+                                            <div class="img-position">
+                                                <div class="slider-img">
+                                                    <img src="./img/primer1.png" class="slider-img-circle">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Кнопки для перехода к предыдущему и следующему слайду -->
+                                <button class="itc-slider__btn itc-slider__btn_prev"></button>
+                                <button class="itc-slider__btn itc-slider__btn_next"></button>
+                            </div>
+                        </div>
+                    </div>
                     <div class="about-our-company mrgnblk v" id="about-us-anchor">
                         <div class="about-our-company-container">
-                            <div><h2>О нашей компании</h2></div>
+                            <h2 class="about-mrgn">О нашей компании</h2>
                             <div class="about-our-company-text">
                                 Компания «АлгорИТм» - партнер фирмы «1C», оказывающий бухгалтерские услуги малому бизнесу под маркой «1C:БухОбслуживание» по единому стандарту и технологии оказания бухгалтерских услуг, разработанному в фирме 1C. Это позволяет контролировать качество оказываемых услуг учета (минимизировать количество ошибок, допускаемых в расчетах, в кадровом учете, при составлен регламентированной отчетности), повышая при этом эффективность работы специалистов. Реализована процедура централизованного аудита качества учета от Фирмы 1C. <br><br> Для наших клиентов мы делаем бухгалтерский мир близким, дружелюбным и простым для понимания. Теперь Вы можете заниматься своим бизнесом, а не бухучетом. И в то же время имеете возможность контролировать свою бухгалтерию с любого компьютера с доступом в Интернет.
-                            </div>
-                            <div class="about-logo-container">
-                                <div class="about-1c-logo">
-                                    <img src="./img/logo/red_on_white_sized_3.png" alt="Логитип 1с" class="about-img-1c">
-                                </div>
-                                <div class="about-algotitm-logo">
-                                    <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="about-img-algoritm ">
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="footer">
-            <div class="first-column">
-                <div class="foter-big-header">Связаться <br>с нами</div>
-                <div class="footer-email">example@gmail.com</div>
-                <div class="footer-adress">Адрес: *************</div>
-                <div class="footer-telephone">Телефон: *************</div>
-            </div>
-            <div class="second-column">
-                <input name="telephone" type="text" placeholder="Имя*">
-                <input name="telephone" type="text" placeholder="e-mail*">
-                <input name="telephone" type="text" placeholder="Телефон*">
-                <button>Отправить</button>
+                <div class="footer">
+                    <div class="first-column">
+                        <div class="foter-big-header">Связаться <br>с нами</div>
+                        <div class="footer-email">example@gmail.com</div>
+                        <div class="footer-adress">Адрес: г. Вологда, ул Костромская, 7</div>
+                        <div class="footer-telephone">Телефон: 8 921 716-88-99</div>
+                    </div>
+                    <div class="second-column">
+                        <input name="telephone" type="text" placeholder="Имя*" class="input-footer">
+                        <input name="telephone" type="text" placeholder="e-mail*" class="input-footer">
+                        <input name="telephone" type="text" placeholder="Телефон*" class="input-footer">
+                        <button>Отправить</button>
+                    </div>
+                </div>
             </div>
         </div>
         <script>
