--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                             <input name="telephone" type="text" placeholder="Имя*" class="input-footer">
                             <input name="telephone" type="text" placeholder="e-mail*" class="input-footer">
                             <input name="telephone" type="text" placeholder="Телефон*" class="input-footer">
-                            <button>Отправить</button>
+                            <button class="footer-btn">Отправить</button>
                         </div>
                 </div>
             </div>
