--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p class="header20">Сосредоточьтесь на управлении бизнеса.<br>
                     Учёт и отчётность мы возьмём на себя.</p>
                 <button class="btn" id="0" onclick="orderopn(this)">
-                    <div class="">Хочу бугалтера</div>
+                    <div class="">Хочу бухгалтера</div>
                 </button>
                 <!-- The Modal -->
                 <div id="myOrderModal" class="modal">
