--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                     </div>
                 </div>
                 <div class="info-container-bot">
+                    <a href="#pluses" class="links bold">Как работает</a>
                     <a href="#tarif-anchor" class="links bold">Тарифы</a>
-                    <a href="#about-us-anchor" class="links bold">О нас</a>
-                    <a href="#" class="links bold">Отзывы</a>
-                    <a href="#" class="links bold" style="margin: 0;">Контакты</a>
+                    <a href="#reviews-anchor" class="links bold">Отзывы</a>
+                    <a href="#about-us-anchor" class="links bold" style="margin: 0;">О нас</a>
                 </div>
             </div>
         </div>
@@ -802,7 +802,52 @@
                             </div>
                         </div>
                     </div>
-                    <div class="reviews v" id="reviews-anchor">
+                    <div class="profit v">
+                        <div class="profit-container">
+                            <div class="tables-profit">
+                                <h2 class="table-header h2">Почему именно мы должны вести ваш бухгалтерский учет:</h2>
+                                <p class="table-profit-text">Сравним затраты на примере "Комплекcного" тарифа по ИП на УСН "Доходы-расходы" с 3 работниками,  в месяц</p>
+                                <table border="1" cellspacing="0" class="profit-table">
+                                        <tr>
+                                            <th>Наименоване затрат</th>
+                                            <th>
+                                                Клиент сам ведет бухгалтерию
+                                            </th>
+                                            <th>
+                                                Мы ведем вашу бухгалтерию
+                                            </th>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">Программа 1С 8 ПРОФ</td>
+                                            <td>1100</td>
+                                            <td rowspan="6" style="font-weight:bold">20858.00</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">1С-Отчетность</td>
+                                            <td>200</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">Консультации по телефону 2 ч.</td>
+                                            <td>4000</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">Заработная плата бухгалтера</td>
+                                            <td>25000</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">Обновление программы</td>
+                                            <td>2800</td>
+                                        </tr>
+                                        <tr>
+                                            <td style="font-weight:bold">Итог</td>
+                                            <td>33100</td>
+                                        </tr>
+                                </table>
+                                <p class="table-text-bold">Выгода очевидна...</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="reviews" id="reviews-anchor">
                         <h2 class="h2">Отзывы</h2>
                         <div class="reviews-container">
                             <div class="itc-slider" data-slider="itc-slider" data-autoplay="true">
