--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <li class="additional-text lih">КАДРОВЫЙ УЧЕТ</li>
                     <li class="additional-text lih">НАЛОГОВЫЙ УЧЕТ</li>
                 </ul>
-                <h2 class="h2">УЧЁТ БИЗНЕСА НАМ</h2>
+                <h2 class="h2 zh2">УЧЁТ БИЗНЕСА НАМ</h2>
                 <p class="header20">Сосредоточьтесь на управлении бизнеса.<br>
                     Учёт и отчётность мы возьмём на себя.</p>
                 <button class="btn" id="0" onclick="orderopn(this)">
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                     <div class="tariffs" id="tarif-anchor">
-                        <h2 class="pdng">Наши Тарифы</h2>
+                        <h2 class="pdng nono">Наши Тарифы</h2>
                         <div class="yellow-arrow"></div>
                         <div class="tariffs-container">
                             <div class="tariffs-blocks">
@@ -802,7 +802,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="profit v">
+                    <!--<div class="profit v">
                         <div class="profit-container">
                             <div class="tables-profit">
                                 <h2 class="table-header h2">Почему именно мы должны вести ваш бухгалтерский учет:</h2>
@@ -846,7 +846,7 @@
                                 <p class="table-text-bold">Выгода очевидна...</p>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="reviews" id="reviews-anchor">
                         <h2 class="h2">Отзывы</h2>
                         <div class="reviews-container">
@@ -923,18 +923,18 @@
                     </div>
                 </div>
                 <div class="footer">
-                        <div class="first-column">
-                            <div class="foter-big-header">Связаться <br>с нами</div>
-                            <div class="footer-email">example@gmail.com</div>
-                            <div class="footer-adress">Адрес: г. Вологда, ул Костромская, 7</div>
-                            <div class="footer-telephone">Телефон: 8 921 716-88-99</div>
-                        </div>
-                        <div class="second-column">
-                            <input name="telephone" type="text" placeholder="Имя*" class="input-footer">
-                            <input name="telephone" type="text" placeholder="e-mail*" class="input-footer">
-                            <input name="telephone" type="text" placeholder="Телефон*" class="input-footer">
-                            <button class="footer-btn">Отправить</button>
-                        </div>
+                    <div class="first-column">
+                        <div class="foter-big-header">Связаться <br>с нами</div>
+                        <div class="footer-email">example@gmail.com</div>
+                        <div class="footer-adress">Адрес: г. Вологда, ул Костромская, 7</div>
+                        <div class="footer-telephone">Телефон: 8 921 716-88-99</div>
+                    </div>
+                    <div class="second-column">
+                        <input name="telephone" type="text" placeholder="Имя*" class="input-footer">
+                        <input name="telephone" type="text" placeholder="e-mail*" class="input-footer">
+                        <input name="telephone" type="text" placeholder="Телефон*" class="input-footer">
+                        <button class="footer-btn">Отправить</button>
+                    </div>
                 </div>
             </div>
         </div>
