--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="profit v">
+                    <!--<div class="profit">
                         <div class="profit-container">
                             <div class="tables-profit">
                                 <h2 class="table-header h2">Почему именно мы должны вести ваш бухгалтерский учет:</h2>
@@ -847,7 +847,7 @@
                             </div>
                         </div>
                     </div>-->
-                    <div class="reviews" id="reviews-anchor">
+                    <div class="reviews v" id="reviews-anchor">
                         <h2 class="h2">Отзывы</h2>
                         <div class="reviews-container">
                             <div class="itc-slider" data-slider="itc-slider" data-autoplay="true">
