--- a/index.html
+++ b/index.html
@@ -924,12 +924,20 @@
                 </div>
                 <div class="footer">
                     <div class="first-column">
-                        <div class="foter-big-header">Связаться <br>с нами</div>
-                        <div class="footer-email">example@gmail.com</div>
+                        <div class="logo-container" style="margin-left: 0px;">
+                            <div class="1c-logo">
+                                <img src="./img/logo/red_on_white_sized_3.png" alt="Логитип 1с" class="img-1c">
+                            </div>
+                            <div class="algotitm-logo">
+                                <img src="./img/algoritmlogored.png" alt="Логитип АлгорИТм" class="img-algoritm">
+                            </div>
+                        </div>
+                        <div class="footer-email">opt@algoritm35.ru</div>
                         <div class="footer-adress">Адрес: г. Вологда, ул Костромская, 7</div>
                         <div class="footer-telephone">Телефон: 8 921 716-88-99</div>
                     </div>
                     <div class="second-column">
+                        <div class="second-column-header">Напишите нам</div>
                         <input name="telephone" type="text" placeholder="Имя*" class="input-footer">
                         <input name="telephone" type="text" placeholder="e-mail*" class="input-footer">
                         <input name="telephone" type="text" placeholder="Телефон*" class="input-footer">
