--- a/index.html
+++ b/index.html
@@ -855,16 +855,10 @@
                                     <div class="itc-slider__items">
                                         <div class="itc-slider__item">
                                             <div class="slider-content">
-                                                <p class="slider-content-text">"Также как социально-экономическое развитие
-                                                    обеспечивает широкому кругу (специалистов) участие в формировании системы
-                                                    обучения кадров, соответствующей насущным потребностям. Каждый из нас
-                                                    понимает очевидную вещь: внедрение современных методик требует анализа
-                                                    инновационных методов управления процессами. В целом, конечно,
-                                                    социально-экономическое развитие говорит о возможностях благоприятных
-                                                    перспектив."</p>
+                                                <p class="slider-content-text">"Помогли вернуть излишне уплаченный налог за предыдущие периоды.   Такая форма сотрудничества нас полностью устраивает, ведь теперь наша бухгалтерия ведется в единой базе, к которой мы имеем круглосуточный доступ."</p>
                                             </div>
-                                            <div class="slider-text-name">Алишер, 25 лет</div>
-                                            <div class="slider-job">Замеситель по особо важным делам</div>
+                                            <div class="slider-text-name">ООО "Джулия тур"</div>
+                                            <div class="slider-job">Турагененство</div>
                                             <div class="img-position">
                                                 <div class="slider-img">
                                                     <img src="./img/primer1.png" class="slider-img-circle">
@@ -873,31 +867,9 @@
                                         </div>
                                         <div class="itc-slider__item">
                                             <div class="slider-content">
-                                                <p class="slider-content-text">"Идейные соображения высшего порядка, а также
-                                                    дальнейшее развитие различных форм деятельности позволяет выполнять важные
-                                                    задания по разработке существенных финансовых и административных условий.
-                                                    Задача организации, в особенности же рамки и место обучения кадров играет
-                                                    важную роль в формировании форм развития. Значимость этих проблем настолько
-                                                    очевидна, что постоянный количественный рост и сфера нашей активности
-                                                    позволяет оценить значение дальнейших направлений развития."</p>
+                                                <p class="slider-content-text">"Специалисты компании отзывчивые и компетентные сотрудники с опытом работы. Всегда оказывают помощь по любому вопросу, касающемуся бухгалтерии, сдачи отчетности, да и в целом по бухгалтерскому обслуживанию."</p>
                                             </div>
-                                            <div class="slider-text-name">Алишер, 25 лет</div>
-                                            <div class="slider-job">Замеситель по особо важным делам</div>
-                                            <div class="img-position">
-                                                <div class="slider-img">
-                                                    <img src="./img/primer1.png" class="slider-img-circle">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="itc-slider__item">
-                                            <div class="slider-content">
-                                                <p class="slider-content-text">Не следует, однако забывать, что новая модель
-                                                    организационной деятельности влечет за собой процесс внедрения и
-                                                    модернизации новых предложений. Не следует, однако забывать, что новая
-                                                    модель организационной деятельности позволяет оценить значение новых
-                                                    предложений.</p>
-                                            </div>
-                                            <div class="slider-text-name">Алишер, 25 лет</div>
+                                            <div class="slider-text-name">ООО "ПИТ СТОП"</div>
                                             <div class="slider-job">Замеситель по особо важным делам</div>
                                             <div class="img-position">
                                                 <div class="slider-img">
